; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_ispstat.c_omap3isp_stat_subscribe_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_ispstat.c_omap3isp_stat_subscribe_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subdev = type { i32 }
%struct.v4l2_fh = type { i32 }
%struct.v4l2_event_subscription = type { i64 }
%struct.ispstat = type { i64 }

@EINVAL = common dso_local global i32 0, align 4
@STAT_NEVENTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @omap3isp_stat_subscribe_event(%struct.v4l2_subdev* %0, %struct.v4l2_fh* %1, %struct.v4l2_event_subscription* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.v4l2_subdev*, align 8
  %6 = alloca %struct.v4l2_fh*, align 8
  %7 = alloca %struct.v4l2_event_subscription*, align 8
  %8 = alloca %struct.ispstat*, align 8
  store %struct.v4l2_subdev* %0, %struct.v4l2_subdev** %5, align 8
  store %struct.v4l2_fh* %1, %struct.v4l2_fh** %6, align 8
  store %struct.v4l2_event_subscription* %2, %struct.v4l2_event_subscription** %7, align 8
  %9 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %5, align 8
  %10 = call %struct.ispstat* @v4l2_get_subdevdata(%struct.v4l2_subdev* %9)
  store %struct.ispstat* %10, %struct.ispstat** %8, align 8
  %11 = load %struct.v4l2_event_subscription*, %struct.v4l2_event_subscription** %7, align 8
  %12 = getelementptr inbounds %struct.v4l2_event_subscription, %struct.v4l2_event_subscription* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.ispstat*, %struct.ispstat** %8, align 8
  %15 = getelementptr inbounds %struct.ispstat, %struct.ispstat* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %13, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %4, align 4
  br label %26

21:                                               ; preds = %3
  %22 = load %struct.v4l2_fh*, %struct.v4l2_fh** %6, align 8
  %23 = load %struct.v4l2_event_subscription*, %struct.v4l2_event_subscription** %7, align 8
  %24 = load i32, i32* @STAT_NEVENTS, align 4
  %25 = call i32 @v4l2_event_subscribe(%struct.v4l2_fh* %22, %struct.v4l2_event_subscription* %23, i32 %24, i32* null)
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %21, %18
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local %struct.ispstat* @v4l2_get_subdevdata(%struct.v4l2_subdev*) #1

declare dso_local i32 @v4l2_event_subscribe(%struct.v4l2_fh*, %struct.v4l2_event_subscription*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
